tests/baselines/reference/symbolProperty46.errors.txt
symbolProperty46.ts(10,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== symbolProperty46.ts (1 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            return "";
        }
        // Should take a string
        set [Symbol.hasInstance](x) {
        }
    }
    
    (new C)[Symbol.hasInstance] = 0;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    (new C)[Symbol.hasInstance] = "";